# construction-survey-results

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Jenkinsfile  MANIFEST.in  Makefile  README.md  actual_output.csv  conftest.py  pyproject.toml  setup.cfg  tests.csv
.github/: CODEOWNERS
.github/workflows/: main.yaml
cons_results/: __init__.py  config.json  main.py  produce_additional_outputs.py
cons_results/configs/: README.md  config_dev.json  config_export.json  config_outputs.json  config_user.json
cons_results/estimation/: estimation.py
cons_results/imputation/: derive_questions.py  impute.py  post_imputation.py
cons_results/outlier_detection/: construction_outlier.py  derive_outlier_weights.py  detect_outlier.py
cons_results/outputs/: cord_output.py  get_additional_outputs.py  imputation_contribution_output.py  imputes_and_construced_output.py  imputes_and_constructed_output.py  produce_additional_outputs.py  qa_output.py  quarterly_by_sizeband_output.py  r_m_output.py  standard_errors.py
cons_results/schemas/: cons_results_schema.toml  cord_output_schema.toml  estimation_output_schema.toml  imputation_schema.toml  outlier_output_schema.toml  produce_qa_output_dereceipted_schema.toml  quarterly_by_sizeband_output_schema.toml  r_and_m_regional_extracts_schema.toml
cons_results/staging/: create_missing_questions.py  create_skipped_questions.py  data_cleaning.py  derive_imputation_class.py  live_or_frozen.py  stage_dataframe.py  total_as_zero.py  validate_snapshot.py
cons_results/utilities/: copy_script_and_config.py  csw_to_228_snapshot.py  utils.py
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  README.md  writing_sphinx_documentation.md
docs/user_guide/: README.md  regenesees_columns.md
tests/: README.md  test_main.py  test_produce_additional_outputs.py
tests/data/: .gitignore
tests/data/imputation/: test_data_290_cases.csv  test_data_impute_290.csv  test_data_impute_290_output.csv  test_data_rescale_290_input.csv  test_data_rescale_290_output.csv  test_data_rescale_imputed_double.csv  test_data_rescale_imputed_single.csv
tests/data/integration_testing/: .gitignore  dereceipted_status.json  excluded_from_results_1.csv  expected_dereceipted_status.csv  expected_form_in_error_1.csv  expected_form_in_error_2.csv  finalsel228_dummy_202412  (+26 more)
tests/imputation/: test_derive_questions.py  test_imputation.py  test_post_imputation.py
tests/integration_testing/: test_integration_staging_and_imputation.py  test_mcs_for_non_response.py
tests/outlier_detection/: test_derive_outlier_weights.py
tests/outputs/: test_get_additional_outputs.py  test_get_cord_output.py  test_imputation_contribution_output.py  test_imputes_and_constructed.py  test_pounds_thousands.py  test_qa_output.py  test_quarterly_by_sizeband_output.py  test_quarterly_extracts.py  test_r_m_output.py  test_standard_errors.py
tests/staging/: test_create_missing_questions.py  test_create_skipped_questions.py  test_derive_imputation_class.py  test_live_or_frozen.py  test_staging.py  test_total_as_zero.py  test_validate_snapshot.py
tests/utilities/: test_utilities.py
(+93 files in other folders)
