[metadata]
name = construction-survey-results
description = Project for construction survey
version = 0.0.0
author = Office for National Statistics
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    cons_results
    cons_results.staging

install_requires =
    pyyaml
    pandas
    numpy
    monthly-business-survey-results @ git+https://github.com/ONSdigital/monthly-business-survey-results.git@
python_requires = >=3.6
zip_safe = no


[options.extras_require]
dev =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    python-dotenv
    Sphinx
    toml
