[metadata]
name = construction-survey-results
description = Project for construction survey
version = 0.0.12
author = Office for National Statistics
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    cons_results
    cons_results.staging
    cons_results.configs
    cons_results.imputation
    cons_results.outputs
    cons_results.outlier_detection
    cons_results.utilities
include_package_data = True
install_requires =
    pyyaml
    pandas
    numpy
    monthly-business-survey-results==0.1.20

python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = cons_results

[options.extras_require]
dev =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    python-dotenv
    Sphinx
    toml

[options.entry_points]
console_scripts =
    setup_cons = cons_results.utilities.copy_script_and_config:setup
    run_cons_main = cons_results.main:run_pipeline
    cons_additional_outputs = cons_results.produce_additional_outputs:produce_additional_outputs_wrapper
